@@ -1,6 +1,6 @@
 /*
  ************************************************************************************
- * Copyright (C) 2012-2017 Openbravo S.L.U.
+ * Copyright (C) 2012-2018 Openbravo S.L.U.
  * Licensed under the Openbravo Commercial License version 1.0
  * You may obtain a copy of the License at http://www.openbravo.com/legal/obcl.html
  * or in the legal folder of this module distribution.
@@ -140,6 +140,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
   private boolean isModified = false;
   private boolean doCancelAndReplace = false;
   private boolean paidReceipt = false;
+  private boolean hasChangePayment = false;
 
   @Inject
   @Any
@@ -170,6 +171,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
   private Instance<OrderLoaderPreAddShipmentLineHook> preAddShipmentLine;
 
   private boolean useOrderDocumentNoForRelatedDocs = false;
+  private int paymentCount = 0;
 
   protected String getImportQualifier() {
     return "Order";
@@ -258,17 +260,14 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         return successMessage(jsonorder);
       }
 
-      if (isModified) {
-        order = OBDal.getInstance().get(Order.class, jsonorder.getString("id"));
+      order = OBDal.getInstance().get(Order.class, jsonorder.getString("id"));
 
-        if (order != null) {
-          final Date loaded = POSUtils.dateFormatUTC.parse(jsonorder.getString("loaded")), updated = OBMOBCUtils
-              .convertToUTC(order.getUpdated());
-          if (loaded.compareTo(updated) != 0) {
-            throw new OutDatedDataChangeException(Utility.messageBD(
-                new DalConnectionProvider(false), "OBPOS_outdatedLayaway", OBContext.getOBContext()
-                    .getLanguage().getLanguage()));
-          }
+      if (order != null) {
+        final Date loaded = POSUtils.dateFormatUTC.parse(jsonorder.getString("loaded")), updated = OBMOBCUtils
+            .convertToUTC(order.getUpdated());
+        if (loaded.compareTo(updated) != 0) {
+          throw new OutDatedDataChangeException(Utility.messageBD(new DalConnectionProvider(false),
+              "OBPOS_outdatedLayaway", OBContext.getOBContext().getLanguage().getLanguage()));
         }
       }
 
@@ -305,11 +304,8 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         // - Or, the order is a normal order or a fully paid layaway, and has the
         // "generateInvoice"
         // flag
-        wasPaidOnCredit = !isQuotation
-            && !isDeleted
-            && !notpaidLayaway
-            && Math.abs(jsonorder.getDouble("payment")) < Math.abs(new Double(jsonorder
-                .getDouble("gross")));
+        wasPaidOnCredit = !isQuotation && !isDeleted && !notpaidLayaway
+            && Math.abs(jsonorder.getDouble("payment")) < Math.abs(jsonorder.getDouble("gross"));
         if (jsonorder.has("oBPOSNotInvoiceOnCashUp")
             && jsonorder.getBoolean("oBPOSNotInvoiceOnCashUp")) {
           createInvoice = false;
@@ -400,9 +396,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
           OBDal.getInstance().save(order);
           lineReferences = new ArrayList<OrderLine>();
           createOrderLines(order, jsonorder, orderlines, lineReferences);
-          if (orderLineServiceList.size() > 0) {
-            createLinesForServiceProduct();
-          }
+
         }
 
         // 37240: done outside of createOrderLines, since needs to be done in all order loaders, not
@@ -435,6 +429,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
           OBCriteria<Locator> locators = OBDal.getInstance().createCriteria(Locator.class);
           locators.add(Restrictions.eq(Locator.PROPERTY_ACTIVE, true));
           locators.add(Restrictions.eq(Locator.PROPERTY_WAREHOUSE, order.getWarehouse()));
+          locators.addOrderBy(Locator.PROPERTY_RELATIVEPRIORITY, true);
           locators.setMaxResults(2);
           List<Locator> locatorList = locators.list();
 
@@ -460,6 +455,9 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
               && CancelAndReplaceUtils
                   .getAssociateGoodsShipmentToNewSalesOrderPreferenceValue(canceledOrder);
           canceledOrder.setObposAppCashup(jsoncashup.getString("id"));
+          if (canceledOrder.isObposIslayaway()) {
+            canceledOrder.setObposIslayaway(false);
+          }
           OBDal.getInstance().save(canceledOrder);
         }
         if (createInvoice) {
@@ -530,16 +528,17 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         // flush and enable triggers, the rest of this method needs enabled
         // triggers
         try {
-          OBDal.getInstance().flush();
+          // enable triggers contains a flush in getConnection method
           TriggerHandler.getInstance().enable();
         } catch (Throwable ignored) {
         }
       }
-
+      if (useOrderDocumentNoForRelatedDocs) {
+        paymentCount = countPayments(order);
+      }
       if (log.isDebugEnabled()) {
         t5 = System.currentTimeMillis();
       }
-
       if (!isQuotation && !isDeleted) {
         // Payment
         JSONObject paymentResponse = handlePayments(jsonorder, order, invoice, wasPaidOnCredit,
@@ -1136,8 +1135,9 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
     final Date orderDate = OBMOBCUtils.calculateClientDatetime(jsonorder.getString("orderDate"),
         Long.parseLong(jsonorder.getString("timezoneOffset")));
     invoice.set("creationDate", orderDate);
-    invoice.setAccountingDate(orderDate);
-    invoice.setInvoiceDate(orderDate);
+    final Date invoiceDate = OBMOBCUtils.stripTime(orderDate);
+    invoice.setAccountingDate(invoiceDate);
+    invoice.setInvoiceDate(invoiceDate);
     invoice.setSalesTransaction(true);
     invoice.setDocumentStatus("CO");
     invoice.setDocumentAction("RE");
@@ -1271,8 +1271,6 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
       foundSingleBin = locatorList.get(0);
     }
     for (int i = 0; i < orderlines.length(); i++) {
-      String hqlWhereClause;
-
       OrderLine orderLine = lineReferences.get(i);
       BigDecimal pendingQty = orderLine.getOrderedQuantity().abs();
       if (orderlines.getJSONObject(i).has("deliveredQuantity")
@@ -1289,9 +1287,9 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
       }
 
       boolean useSingleBin = foundSingleBin != null && orderLine.getAttributeSetValue() == null
-          && orderLine.getProduct().getAttributeSet() == null
           && orderLine.getWarehouseRule() == null
-          && (order.getWarehouse().getId().equals(warehouse.getId()));
+          && (order.getWarehouse().getId().equals(warehouse.getId()))
+          && orderLine.getProduct().getAttributeSet() == null;
 
       if (negativeLine && pendingQty.compareTo(BigDecimal.ZERO) > 0) {
         OrderLoaderPreAddShipmentLineHook_Response returnBinHookResponse;
@@ -1424,12 +1422,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
           if (jsonorderline.has("overissueStoreBin")) {
             loc = OBDal.getInstance().get(Locator.class, jsonorderline.get("overissueStoreBin"));
           } else {
-            hqlWhereClause = " l where l.warehouse = :warehouse order by l.relativePriority, l.id";
-            OBQuery<Locator> queryLoc = OBDal.getInstance().createQuery(Locator.class,
-                hqlWhereClause);
-            queryLoc.setNamedParameter("warehouse", warehouse);
-            queryLoc.setMaxResult(1);
-            loc = queryLoc.uniqueResult();
+            loc = locatorList.get(0);
           }
 
           try {
@@ -1682,11 +1675,18 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
             }
             promotion.setObdiscIdentifier(identifier);
           }
+          if (jsonPromotion.has("discountinstance") && !jsonPromotion.isNull("discountinstance")) {
+            String discountinstance = jsonPromotion.getString("discountinstance");
+            promotion.setObposDiscountinstance(discountinstance);
+          }
           promotion.setId(OBMOBCUtils.getUUIDbyString(orderline.getId() + p));
           promotion.setNewOBObject(true);
           orderline.getOrderLineOfferList().add(promotion);
         }
       }
+    }
+    if (orderLineServiceList.size() > 0) {
+      createLinesForServiceProduct(lineReferences);
     }
   }
 
@@ -1703,47 +1703,51 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
     deleteQuery.executeUpdate();
   }
 
-  protected void createLinesForServiceProduct() throws JSONException {
+  private void createLinesForServiceProduct(ArrayList<OrderLine> lineReferences)
+      throws JSONException {
     Iterator<Entry<String, JSONArray>> orderLineIterator = orderLineServiceList.entrySet()
         .iterator();
+
     while (orderLineIterator.hasNext()) {
       Entry<String, JSONArray> olservice = orderLineIterator.next();
-      OrderLine orderLine = OBDal.getInstance().get(OrderLine.class, olservice.getKey());
-      JSONArray relatedLines = olservice.getValue();
-      for (int i = 0; i < relatedLines.length(); i++) {
-        OrderlineServiceRelation olServiceRelation = OBProvider.getInstance().get(
-            OrderlineServiceRelation.class);
-        JSONObject relatedJsonOrderLine = relatedLines.getJSONObject(i);
-        OrderLine rol = OBDal.getInstance().get(OrderLine.class,
-            relatedJsonOrderLine.get("orderlineId"));
-        if (rol != null) {
-          olServiceRelation.setActive(true);
-          olServiceRelation.setOrganization(orderLine.getOrganization());
-          olServiceRelation.setCreatedBy(orderLine.getCreatedBy());
-          olServiceRelation.setCreationDate(orderLine.getCreationDate());
-          if ("UQ".equals(orderLine.getProduct().getQuantityRule())) {
-            if (orderLine.getOrderedQuantity().compareTo(BigDecimal.ZERO) > 0) {
-              olServiceRelation.setQuantity(BigDecimal.ONE);
-            } else {
-              olServiceRelation.setQuantity(new BigDecimal(-1));
+      for (OrderLine orderLine : lineReferences) {
+        if (orderLine.getId().equals(olservice.getKey())) {
+          JSONArray relatedLines = olservice.getValue();
+          for (int i = 0; i < relatedLines.length(); i++) {
+            OrderlineServiceRelation olServiceRelation = OBProvider.getInstance().get(
+                OrderlineServiceRelation.class);
+            JSONObject relatedJsonOrderLine = relatedLines.getJSONObject(i);
+            OrderLine rol = OBDal.getInstance().get(OrderLine.class,
+                relatedJsonOrderLine.get("orderlineId"));
+            if (rol != null) {
+              olServiceRelation.setActive(true);
+              olServiceRelation.setOrganization(orderLine.getOrganization());
+              olServiceRelation.setCreatedBy(orderLine.getCreatedBy());
+              olServiceRelation.setCreationDate(orderLine.getCreationDate());
+              if ("UQ".equals(orderLine.getProduct().getQuantityRule())) {
+                if (orderLine.getOrderedQuantity().compareTo(BigDecimal.ZERO) > 0) {
+                  olServiceRelation.setQuantity(BigDecimal.ONE);
+                } else {
+                  olServiceRelation.setQuantity(new BigDecimal(-1));
+                }
+              } else {
+                if (rol.getOrderedQuantity().signum() != orderLine.getOrderedQuantity().signum()) {
+                  olServiceRelation.setQuantity(rol.getOrderedQuantity().negate());
+                } else {
+                  olServiceRelation.setQuantity(rol.getOrderedQuantity());
+                }
+              }
+              olServiceRelation.setAmount(rol.getBaseGrossUnitPrice().multiply(
+                  olServiceRelation.getQuantity()));
+              olServiceRelation.setUpdated(orderLine.getUpdated());
+              olServiceRelation.setUpdatedBy(orderLine.getUpdatedBy());
+              olServiceRelation.setSalesOrderLine(orderLine);
+              olServiceRelation.setOrderlineRelated(rol);
+              olServiceRelation.setId(OBMOBCUtils.getUUIDbyString(orderLine.getId() + i));
+              olServiceRelation.setNewOBObject(true);
+              OBDal.getInstance().save(olServiceRelation);
             }
-          } else {
-            if (rol.getOrderedQuantity().signum() != orderLine.getOrderedQuantity().signum()) {
-              olServiceRelation.setQuantity(rol.getOrderedQuantity().negate());
-            } else {
-              olServiceRelation.setQuantity(rol.getOrderedQuantity());
-            }
-
           }
-          olServiceRelation.setAmount(rol.getBaseGrossUnitPrice().multiply(
-              olServiceRelation.getQuantity()));
-          olServiceRelation.setUpdated(orderLine.getUpdated());
-          olServiceRelation.setUpdatedBy(orderLine.getUpdatedBy());
-          olServiceRelation.setSalesOrderLine(orderLine);
-          olServiceRelation.setOrderlineRelated(rol);
-          olServiceRelation.setId(OBMOBCUtils.getUUIDbyString(orderLine.getId() + i));
-          olServiceRelation.setNewOBObject(true);
-          OBDal.getInstance().save(olServiceRelation);
         }
       }
     }
@@ -1823,7 +1827,6 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         }
       }
     }
-
     if (!jsonorder.getJSONObject("bp").isNull("paymentTerms")
         && !jsonorder.getJSONObject("bp").getString("paymentTerms").equals("null")) {
       order.setPaymentTerms((PaymentTerm) OBDal.getInstance().getProxy("FinancialMgmtPaymentTerm",
@@ -1956,19 +1959,17 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
       }
     }
 
-    if (!bp.getADUserList().isEmpty()) {
-      String userHqlWhereClause = " usr where usr.businessPartner = :bp and usr.organization.id in (:orgs) order by username";
-      OBQuery<User> queryUser = OBDal.getInstance().createQuery(User.class, userHqlWhereClause);
-      queryUser.setNamedParameter("bp", order.getBusinessPartner());
-      queryUser.setNamedParameter("orgs", OBContext.getOBContext()
-          .getOrganizationStructureProvider().getNaturalTree(order.getOrganization().getId()));
-      // already filtered
-      queryUser.setFilterOnReadableOrganization(false);
-      queryUser.setMaxResult(1);
-      List<User> lstResultUsers = queryUser.list();
-      if (lstResultUsers != null && lstResultUsers.size() > 0) {
-        order.setUserContact(lstResultUsers.get(0));
-      }
+    String userHqlWhereClause = " usr where usr.businessPartner = :bp and usr.organization.id in (:orgs) order by username";
+    OBQuery<User> queryUser = OBDal.getInstance().createQuery(User.class, userHqlWhereClause);
+    queryUser.setNamedParameter("bp", bp);
+    queryUser.setNamedParameter("orgs", OBContext.getOBContext().getOrganizationStructureProvider()
+        .getNaturalTree(order.getOrganization().getId()));
+    // already filtered
+    queryUser.setFilterOnReadableOrganization(false);
+    queryUser.setMaxResult(1);
+    List<User> lstResultUsers = queryUser.list();
+    if (lstResultUsers != null && lstResultUsers.size() > 0) {
+      order.setUserContact(lstResultUsers.get(0));
     }
 
     if (!order.isNewOBObject()) {
@@ -2187,6 +2188,16 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         .valueOf(jsonorder.getDouble("payment"));
     BigDecimal amountPaidWithCredit = BigDecimal.ZERO;
 
+    if (payments.length() == 0 && gross.compareTo(BigDecimal.ZERO) == 0) {
+      if (invoice != null) {
+        invoice.setPaymentComplete(Boolean.TRUE);
+        OBDal.getInstance().save(invoice);
+      }
+
+      jsonResponse.put(JsonConstants.RESPONSE_STATUS, JsonConstants.RPCREQUEST_STATUS_SUCCESS);
+      return jsonResponse;
+    }
+
     FIN_PaymentSchedule paymentSchedule;
     int pricePrecision = order.getCurrency().getObposPosprecision() == null ? order.getCurrency()
         .getPricePrecision().intValue() : order.getCurrency().getObposPosprecision().intValue();
@@ -2350,7 +2361,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
     }
 
     BigDecimal writeoffAmt = paymentAmt.subtract(gross.abs());
-
+    boolean hasReversalPayment = false;
     for (int i = 0; i < payments.length(); i++) {
       JSONObject payment = payments.getJSONObject(i);
       OBPOSAppPayment paymentType = null;
@@ -2364,21 +2375,24 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
       // Because of that, the next condition must be ignored to reversal payments
       BigDecimal paid = BigDecimal.valueOf(payment.getDouble("paid"));
       boolean isReversalPayment = payment.has("reversedPaymentId");
+      if (isReversalPayment) {
+        hasReversalPayment = true;
+      }
       if (paid.compareTo(BigDecimal.ZERO) == 0 && !isReversalPayment) {
         continue;
       }
       String paymentTypeName = payment.getString("kind");
-      for (OBPOSAppPayment type : posTerminal.getOBPOSAppPaymentList()) {
-        if (type.getSearchKey().equals(paymentTypeName)) {
-          paymentType = type;
-          break;
-        }
-      }
+      OBCriteria<OBPOSAppPayment> type = OBDal.getInstance().createCriteria(OBPOSAppPayment.class);
+      type.add(Restrictions.eq(OBPOSAppPayment.PROPERTY_SEARCHKEY, paymentTypeName));
+      type.add(Restrictions.eq(OBPOSAppPayment.PROPERTY_OBPOSAPPLICATIONS + ".id", posTerminalId));
+      type.setMaxResults(1);
+      paymentType = (OBPOSAppPayment) type.uniqueResult();
+
       if (paymentType == null) {
         @SuppressWarnings("unchecked")
         Class<PaymentProcessor> paymentclazz = (Class<PaymentProcessor>) Class
             .forName(paymentTypeName);
-        PaymentProcessor paymentinst = paymentclazz.newInstance();
+        PaymentProcessor paymentinst = paymentclazz.getDeclaredConstructor().newInstance();
         paymentinst.process(payment, order, invoice, writeoffAmt);
       } else {
         FIN_FinancialAccount account = null;
@@ -2396,6 +2410,9 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
           // In case writeoff is higher than amount, we put 1 as payment and rest as overpayment
           // because the payment cannot be 0 (It wouldn't be created)
           tempWriteoffAmt = amount.abs().subtract(BigDecimal.ONE);
+        }
+        if (useOrderDocumentNoForRelatedDocs) {
+          paymentCount++;
         }
         processPayments(paymentSchedule, paymentScheduleInvoice, order, invoice, paymentType,
             payment, tempWriteoffAmt, jsonorder, account);
@@ -2415,12 +2432,16 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         }
       }
 
+      FIN_PaymentScheduleDetail paymentScheduleDetail = null;
       for (int j = 0; j < paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList()
           .size(); j++) {
         if (paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList().get(j)
             .getInvoicePaymentSchedule() == null) {
-          paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList().get(j)
-              .setInvoicePaymentSchedule(paymentScheduleInvoice);
+          paymentScheduleDetail = paymentSchedule
+              .getFINPaymentScheduleDetailOrderPaymentScheduleList().get(j);
+          paymentScheduleDetail.setInvoicePaymentSchedule(paymentScheduleInvoice);
+          paymentScheduleInvoice.getFINPaymentScheduleDetailInvoicePaymentScheduleList().add(
+              paymentScheduleDetail);
         }
       }
 
@@ -2430,30 +2451,22 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
       invoice.setPaymentComplete(amountPaidWithCredit.compareTo(BigDecimal.ZERO) == 0);
       invoice.setDaysTillDue(FIN_Utility.getDaysToDue(paymentScheduleInvoice == null ? invoice
           .getInvoiceDate() : paymentScheduleInvoice.getDueDate()));
-      if (paymentScheduleInvoice != null
-          && paymentScheduleInvoice.getOutstandingAmount().compareTo(BigDecimal.ZERO) != 0) {
-        if (paymentScheduleInvoice.getAmount().signum() >= 0) {
-          if (paymentScheduleInvoice.getAmount().compareTo(paymentAmt) >= 0) {
-            paymentScheduleInvoice.setOutstandingAmount(paymentScheduleInvoice.getAmount()
-                .subtract(paymentAmt));
-            paymentScheduleInvoice.setPaidAmount(paymentAmt);
-          } else {
-            paymentScheduleInvoice.setOutstandingAmount(BigDecimal.ZERO);
-            paymentScheduleInvoice.setPaidAmount(paymentScheduleInvoice.getAmount());
-          }
-        } else {
-          if (paymentScheduleInvoice.getAmount().compareTo(paymentAmt) <= 0) {
-            paymentScheduleInvoice.setOutstandingAmount(paymentScheduleInvoice.getAmount().add(
-                paymentAmt));
-            paymentScheduleInvoice.setPaidAmount(paymentAmt.negate());
-          } else {
-            paymentScheduleInvoice.setOutstandingAmount(BigDecimal.ZERO);
-            paymentScheduleInvoice.setPaidAmount(paymentScheduleInvoice.getAmount());
-          }
-        }
-        OBDal.getInstance().save(paymentScheduleInvoice);
-      }
       OBDal.getInstance().save(invoice);
+
+      if (hasReversalPayment && invoice != null) {
+        for (FIN_PaymentSchedule paymentSch : invoice.getFINPaymentScheduleList()) {
+          BigDecimal paidAmount = BigDecimal.ZERO, outstandingAmount = null;
+          for (FIN_PaymentScheduleDetail pScheDetail : paymentSch
+              .getFINPaymentScheduleDetailInvoicePaymentScheduleList()) {
+            paidAmount = paidAmount.add(pScheDetail.getAmount());
+          }
+          outstandingAmount = paidAmount.compareTo(paymentSch.getAmount()) >= 0 ? BigDecimal.ZERO
+              : paymentSch.getAmount().subtract(paidAmount);
+          paymentSch.setPaidAmount(paidAmount);
+          paymentSch.setOutstandingAmount(outstandingAmount);
+          OBDal.getInstance().save(paymentSch);
+        }
+      }
     }
 
     BigDecimal diffPaid = BigDecimal.ZERO;
@@ -2597,6 +2610,8 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
     OBContext.setAdminMode(true);
     try {
       boolean totalIsNegative = jsonorder.getDouble("gross") < 0;
+      boolean hasReceiptChange = jsonorder.getDouble("change") > 0, isChangePayment = payment
+          .optBoolean("isChange", false), hasPaymentScheduleInvoice = false;
       boolean checkPaidOnCreditChecked = (jsonorder.has("paidOnCredit") && jsonorder
           .getBoolean("paidOnCredit"));
       int pricePrecision = order.getCurrency().getObposPosprecision() == null ? order.getCurrency()
@@ -2657,7 +2672,7 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
 
       // Issue 36371, delete a FIN_PaymentScheduleDetail is slow, so instead of create one, and
       // deleted all not linked. To avoid that, instead create one, take the first non linked
-      FIN_PaymentScheduleDetail paymentScheduleDetail = null;
+      FIN_PaymentScheduleDetail paymentScheduleDetail = null, changeAmtScheduleDetail = null;
       List<FIN_PaymentScheduleDetail> pScheduleDetails = new ArrayList<FIN_PaymentScheduleDetail>();
       pScheduleDetails
           .addAll(paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList());
@@ -2668,20 +2683,53 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
           break;
         }
       }
-
       if (paymentScheduleDetail == null) {
         // When creating the layaway
         paymentScheduleDetail = OBProvider.getInstance().get(FIN_PaymentScheduleDetail.class);
         paymentScheduleDetail.setNewOBObject(true);
       }
+      BigDecimal gross = BigDecimal.valueOf(jsonorder.getDouble("gross"));
+      if (!isChangePayment && hasReceiptChange && !hasChangePayment
+          && payment.optBoolean("isCash", false)
+          && payment.optBoolean("isReversePayment", false) == false) {
+        BigDecimal cashAmt = getPaymentAmount(jsonorder).abs();
+        if (cashAmt.compareTo(gross.abs()) > 0) {
+          hasReceiptChange = true;
+        } else {
+          hasReceiptChange = false;
+        }
+      } else {
+        hasReceiptChange = false;
+      }
 
-      paymentScheduleDetail.setOrderPaymentSchedule(paymentSchedule);
-      paymentScheduleDetail.setBusinessPartner(order.getBusinessPartner());
+      // issue 38038 : Cash Change should not be linked to order or invoice.
+      // It should be linked to Writeoff GL Item
+      BigDecimal paymentAmt = amount;
+      if (payment.optBoolean("isCash", false) && (isChangePayment || hasReceiptChange)) {
+        BigDecimal diffAmount = null;
+        if (isChangePayment) {
+          diffAmount = paymentAmt;
+          hasPaymentScheduleInvoice = true;
+        } else {
+          diffAmount = new BigDecimal(jsonorder.getDouble("change"));
+          diffAmount = gross.signum() >= 0 ? diffAmount : diffAmount.negate();
+          paymentAmt = paymentAmt.subtract(diffAmount);
+          hasChangePayment = true;
+        }
+        changeAmtScheduleDetail = OBProvider.getInstance().get(FIN_PaymentScheduleDetail.class);
+        changeAmtScheduleDetail.setNewOBObject(true);
+        changeAmtScheduleDetail.setBusinessPartner(order.getBusinessPartner());
+        changeAmtScheduleDetail.setAmount(diffAmount);
+        OBDal.getInstance().save(changeAmtScheduleDetail);
 
-      boolean resetPSD = false, hasPaymentScheduleInvoice = false;
-      List<FIN_PaymentSchedule> paymentScheduleInvoiceList = null;
-      if (invoice != null && invoice.getGrandTotalAmount().compareTo(BigDecimal.ZERO) != 0) {
-        paymentScheduleInvoiceList = invoice.getFINPaymentScheduleList();
+        // Add to Payment List
+        paymentAmount.put(changeAmtScheduleDetail.getId(), diffAmount);
+        detail.add(changeAmtScheduleDetail);
+      }
+
+      if (invoice != null && invoice.getGrandTotalAmount().compareTo(BigDecimal.ZERO) != 0
+          && !isChangePayment) {
+        List<FIN_PaymentSchedule> paymentScheduleInvoiceList = invoice.getFINPaymentScheduleList();
         Collections.sort(paymentScheduleInvoiceList, new Comparator<Object>() {
           @Override
           public int compare(Object o1, Object o2) {
@@ -2689,38 +2737,23 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
                 ((FIN_PaymentSchedule) o2).getDueDate());
           }
         });
-      }
 
-      if (paymentScheduleInvoiceList != null) {
-        BigDecimal outstandingPaidAmount = amount, psdAmount = BigDecimal.ZERO;
-        for (FIN_PaymentSchedule paymentScheduleInv : paymentScheduleInvoiceList) {
-          if (outstandingPaidAmount.compareTo(BigDecimal.ZERO) == 0
-              || paymentScheduleInv.getOutstandingAmount().compareTo(BigDecimal.ZERO) == 0) {
-            continue;
-          }
-
-          if (resetPSD) {
-            paymentScheduleDetail = OBProvider.getInstance().get(FIN_PaymentScheduleDetail.class);
-            paymentScheduleDetail.setNewOBObject(true);
-            paymentScheduleDetail.setOrderPaymentSchedule(paymentSchedule);
-            paymentScheduleDetail.setBusinessPartner(order.getBusinessPartner());
-          }
-
-          if (outstandingPaidAmount.signum() >= 0) {
-            if (outstandingPaidAmount.compareTo(paymentScheduleInv.getOutstandingAmount()) >= 0) {
-              psdAmount = paymentScheduleInv.getOutstandingAmount();
-              outstandingPaidAmount = outstandingPaidAmount.subtract(paymentScheduleInv
-                  .getOutstandingAmount());
-            } else {
-              psdAmount = outstandingPaidAmount;
-              outstandingPaidAmount = BigDecimal.ZERO;
+        if (paymentScheduleInvoiceList != null && paymentScheduleInvoiceList.size() > 0) {
+          BigDecimal outstandingPaidAmount = paymentAmt, psdAmount = BigDecimal.ZERO;
+          boolean resetPSD = false;
+          for (FIN_PaymentSchedule paymentScheduleInv : paymentScheduleInvoiceList) {
+            if (outstandingPaidAmount.compareTo(BigDecimal.ZERO) == 0
+                || paymentScheduleInv.getOutstandingAmount().compareTo(BigDecimal.ZERO) == 0) {
+              continue;
             }
-          } else {
-            if (paymentScheduleInv.getOutstandingAmount().signum() >= 0) {
-              psdAmount = outstandingPaidAmount;
-              outstandingPaidAmount = BigDecimal.ZERO;
-            } else {
-              if (outstandingPaidAmount.compareTo(paymentScheduleInv.getOutstandingAmount()) <= 0) {
+
+            if (resetPSD) {
+              paymentScheduleDetail = OBProvider.getInstance().get(FIN_PaymentScheduleDetail.class);
+              paymentScheduleDetail.setNewOBObject(true);
+            }
+
+            if (outstandingPaidAmount.signum() >= 0) {
+              if (outstandingPaidAmount.compareTo(paymentScheduleInv.getOutstandingAmount()) >= 0) {
                 psdAmount = paymentScheduleInv.getOutstandingAmount();
                 outstandingPaidAmount = outstandingPaidAmount.subtract(paymentScheduleInv
                     .getOutstandingAmount());
@@ -2728,56 +2761,73 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
                 psdAmount = outstandingPaidAmount;
                 outstandingPaidAmount = BigDecimal.ZERO;
               }
+            } else {
+              if (paymentScheduleInv.getOutstandingAmount().signum() >= 0) {
+                psdAmount = outstandingPaidAmount;
+                outstandingPaidAmount = BigDecimal.ZERO;
+              } else {
+                if (outstandingPaidAmount.compareTo(paymentScheduleInv.getOutstandingAmount()) <= 0) {
+                  psdAmount = paymentScheduleInv.getOutstandingAmount();
+                  outstandingPaidAmount = outstandingPaidAmount.subtract(paymentScheduleInv
+                      .getOutstandingAmount());
+                } else {
+                  psdAmount = outstandingPaidAmount;
+                  outstandingPaidAmount = BigDecimal.ZERO;
+                }
+              }
             }
+
+            paymentScheduleDetail.setOrderPaymentSchedule(paymentSchedule);
+            paymentScheduleDetail.setBusinessPartner(order.getBusinessPartner());
+            paymentScheduleDetail.setAmount(psdAmount);
+            paymentScheduleDetail.setInvoicePaymentSchedule(paymentScheduleInv);
+            paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList().add(
+                paymentScheduleDetail);
+            paymentScheduleInv.getFINPaymentScheduleDetailInvoicePaymentScheduleList().add(
+                paymentScheduleDetail);
+            OBDal.getInstance().save(paymentScheduleDetail);
+
+            resetPSD = true;
+            hasPaymentScheduleInvoice = true;
+
+            // Add to Payment List
+            paymentAmount.put(paymentScheduleDetail.getId(), psdAmount);
+            detail.add(paymentScheduleDetail);
           }
 
-          paymentScheduleDetail.setAmount(psdAmount);
-          paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList().add(
-              paymentScheduleDetail);
-          OBDal.getInstance().save(paymentScheduleDetail);
+          Fin_OrigPaymentSchedule origPaymentSchedule = OBProvider.getInstance().get(
+              Fin_OrigPaymentSchedule.class);
+          origPaymentSchedule.setCurrency(order.getCurrency());
+          origPaymentSchedule.setInvoice(invoice);
+          origPaymentSchedule.setPaymentMethod(paymentSchedule.getFinPaymentmethod());
+          origPaymentSchedule.setAmount(amount);
+          origPaymentSchedule.setDueDate(order.getOrderDate());
+          origPaymentSchedule.setPaymentPriority(order.getFINPaymentPriority());
 
-          paymentScheduleInv.getFINPaymentScheduleDetailInvoicePaymentScheduleList().add(
-              paymentScheduleDetail);
-          paymentScheduleDetail.setInvoicePaymentSchedule(paymentScheduleInv);
+          OBDal.getInstance().save(origPaymentSchedule);
 
-          resetPSD = true;
-          hasPaymentScheduleInvoice = true;
+          FIN_OrigPaymentScheduleDetail origDetail = OBProvider.getInstance().get(
+              FIN_OrigPaymentScheduleDetail.class);
+          origDetail.setArchivedPaymentPlan(origPaymentSchedule);
+          origDetail.setPaymentScheduleDetail(paymentScheduleDetail);
+          origDetail.setAmount(amount);
+          origDetail.setWriteoffAmount(paymentScheduleDetail.getWriteoffAmount().setScale(
+              pricePrecision, RoundingMode.HALF_UP));
 
-          // Add to Payment List
-          paymentAmount.put(paymentScheduleDetail.getId(), psdAmount);
-          detail.add(paymentScheduleDetail);
+          OBDal.getInstance().save(origDetail);
         }
-
-        Fin_OrigPaymentSchedule origPaymentSchedule = OBProvider.getInstance().get(
-            Fin_OrigPaymentSchedule.class);
-        origPaymentSchedule.setCurrency(order.getCurrency());
-        origPaymentSchedule.setInvoice(invoice);
-        origPaymentSchedule.setPaymentMethod(paymentSchedule.getFinPaymentmethod());
-        origPaymentSchedule.setAmount(amount);
-        origPaymentSchedule.setDueDate(order.getOrderDate());
-        origPaymentSchedule.setPaymentPriority(order.getFINPaymentPriority());
-
-        OBDal.getInstance().save(origPaymentSchedule);
-
-        FIN_OrigPaymentScheduleDetail origDetail = OBProvider.getInstance().get(
-            FIN_OrigPaymentScheduleDetail.class);
-        origDetail.setArchivedPaymentPlan(origPaymentSchedule);
-        origDetail.setPaymentScheduleDetail(paymentScheduleDetail);
-        origDetail.setAmount(amount);
-        origDetail.setWriteoffAmount(paymentScheduleDetail.getWriteoffAmount().setScale(
-            pricePrecision, RoundingMode.HALF_UP));
-
-        OBDal.getInstance().save(origDetail);
       }
 
       if (!hasPaymentScheduleInvoice) {
-        paymentScheduleDetail.setAmount(amount);
+        paymentScheduleDetail.setOrderPaymentSchedule(paymentSchedule);
+        paymentScheduleDetail.setBusinessPartner(order.getBusinessPartner());
+        paymentScheduleDetail.setAmount(paymentAmt);
         paymentSchedule.getFINPaymentScheduleDetailOrderPaymentScheduleList().add(
             paymentScheduleDetail);
         OBDal.getInstance().save(paymentScheduleDetail);
 
         // Add to Payment List
-        paymentAmount.put(paymentScheduleDetail.getId(), amount);
+        paymentAmount.put(paymentScheduleDetail.getId(), paymentAmt);
         detail.add(paymentScheduleDetail);
       }
 
@@ -2786,7 +2836,6 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
 
       String paymentDocNo;
       if (useOrderDocumentNoForRelatedDocs) {
-        final int paymentCount = countPayments(order);
         paymentDocNo = order.getDocumentNo();
         if (paymentCount > 0) {
           paymentDocNo = paymentDocNo + "-" + paymentCount;
@@ -2829,6 +2878,14 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         finPayment.setAmount(origAmount.setScale(pricePrecision, RoundingMode.HALF_UP));
       }
 
+      // issue 38038 : Associate GLItem with payment detail
+      if (changeAmtScheduleDetail != null) {
+        FIN_PaymentDetail paymentDetail = changeAmtScheduleDetail.getPaymentDetails();
+        paymentDetail.setGLItem(paymentType.getPaymentMethod().getGlitemWriteoff());
+        OBDal.getInstance().save(paymentDetail);
+        OBDal.getInstance().flush();
+      }
+
       if (checkPaidOnCreditChecked) {
         List<FIN_PaymentDetail> paymentDetailList = finPayment.getFINPaymentDetailList();
         if (paymentDetailList.size() > 0) {
@@ -2857,6 +2914,10 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         reversedPayment.setReversedPayment(finPayment);
         OBDal.getInstance().save(reversedPayment);
       }
+      finPayment.setObposAppCashup(payment.has("obposAppCashup") ? OBDal.getInstance().get(
+          OBPOSAppCashup.class, payment.getString("obposAppCashup")) : null);
+      finPayment.setOBPOSPOSTerminal(payment.has("oBPOSPOSTerminal") ? OBDal.getInstance().get(
+          OBPOSApplications.class, payment.getString("oBPOSPOSTerminal")) : null);
 
       OBDal.getInstance().save(finPayment);
 
@@ -2876,9 +2937,12 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
         OBDal.getInstance().refresh(finPayment);
         final List<FIN_FinaccTransaction> transactions = finPayment.getFINFinaccTransactionList();
         final String cashupId = jsonorder.getString("obposAppCashup");
-        final OBPOSAppCashup cashup = OBDal.getInstance().get(OBPOSAppCashup.class, cashupId);
-        for (FIN_FinaccTransaction transaction : transactions) {
-          transaction.setObposAppCashup(cashup);
+        if (Utility.isUUIDString(cashupId)) {
+          final OBPOSAppCashup cashup = OBDal.getInstance()
+              .getProxy(OBPOSAppCashup.class, cashupId);
+          for (FIN_FinaccTransaction transaction : transactions) {
+            transaction.setObposAppCashup(cashup);
+          }
         }
       }
     } finally {
@@ -2887,10 +2951,31 @@ public class OrderLoader extends POSDataSynchronizationProcess implements
 
   }
 
+  private BigDecimal getPaymentAmount(JSONObject jsonorder) {
+    BigDecimal amount = BigDecimal.ZERO;
+    JSONArray payments;
+    try {
+      payments = jsonorder.getJSONArray("payments");
+      for (int i = 0; i < payments.length(); i++) {
+        JSONObject payment = payments.getJSONObject(i);
+        if (payment.optBoolean("isChange", false) == true
+            || (!doCancelAndReplace && payment.optBoolean("isPrePayment", false) == true)
+            || payment.optBoolean("isReversePayment", false) == true) {
+          continue;
+        }
+        amount = amount.add(new BigDecimal(payment.optString("origAmount")));
+      }
+    } catch (JSONException e) {
+      log.error("Exceptin in getCashPaymentAmount ", e);
+    }
+    return amount;
+  }
+
   private int countPayments(Order order) {
     final String countHql = "select count(*) from FIN_Payment_ScheduleDetail where "
         + FIN_PaymentScheduleDetail.PROPERTY_ORDERPAYMENTSCHEDULE + "."
-        + FIN_PaymentSchedule.PROPERTY_ORDER + "=:order";
+        + FIN_PaymentSchedule.PROPERTY_ORDER + "=:order" + " and "
+        + FIN_PaymentScheduleDetail.PROPERTY_PAYMENTDETAILS + " is not null ";
     final Query qry = OBDal.getInstance().getSession().createQuery(countHql);
     qry.setEntity("order", order);
     return ((Number) qry.uniqueResult()).intValue();
